Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UNavMovementComponent.h

	DOTNET_EXPORT auto E_UNavMovementComponent_SetPlaneConstraintNormal(UNavMovementComponent* Self, INT_PTR PlaneNormal)
	{
		auto _p0 = *(FVector*)PlaneNormal;
		Self->SetPlaneConstraintNormal(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetPlaneConstraintOrigin(UNavMovementComponent* Self, INT_PTR PlaneOrigin)
	{
		auto _p0 = *(FVector*)PlaneOrigin;
		Self->SetPlaneConstraintOrigin(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetUpdatedComponent(UNavMovementComponent* Self, USceneComponent* NewUpdatedComponent)
	{
		auto _p0 = NewUpdatedComponent;
		Self->SetUpdatedComponent(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ShouldSkipUpdate(UNavMovementComponent* Self, float DeltaTime)
	{
		auto _p0 = DeltaTime;
		return Self->ShouldSkipUpdate(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SlideAlongSurface(UNavMovementComponent* Self, INT_PTR Delta, float Time, INT_PTR Normal, INT_PTR Hit, bool bHandleImpact)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = Time;
		auto _p2 = *(FVector*)Normal;
		auto _p3 = *(FHitResult*)Hit;
		auto _p4 = bHandleImpact;
		return Self->SlideAlongSurface(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SnapUpdatedComponentToPlane(UNavMovementComponent* Self)
	{
		Self->SnapUpdatedComponentToPlane();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_TwoWallAdjust(UNavMovementComponent* Self, INT_PTR Delta, INT_PTR Hit, INT_PTR OldHitNormal)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FHitResult*)Hit;
		auto _p2 = *(FVector*)OldHitNormal;
		Self->TwoWallAdjust(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_UpdateComponentVelocity(UNavMovementComponent* Self)
	{
		Self->UpdateComponentVelocity();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_UpdateTickRegistration(UNavMovementComponent* Self)
	{
		Self->UpdateTickRegistration();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_Activate(UNavMovementComponent* Self, bool bReset)
	{
		auto _p0 = bReset;
		Self->Activate(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_AddTickPrerequisiteActor(UNavMovementComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_AddTickPrerequisiteComponent(UNavMovementComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ApplyWorldOffset(UNavMovementComponent* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_BeginDestroy(UNavMovementComponent* Self)
	{
		Self->BeginDestroy();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_BeginPlay(UNavMovementComponent* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CreateRenderState_Concurrent(UNavMovementComponent* Self)
	{
		Self->CreateRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_DestroyComponent(UNavMovementComponent* Self, bool bPromoteChildren)
	{
		auto _p0 = bPromoteChildren;
		Self->DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_DestroyRenderState_Concurrent(UNavMovementComponent* Self)
	{
		Self->DestroyRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetComponentClassCanReplicate(UNavMovementComponent* Self)
	{
		return Self->GetComponentClassCanReplicate();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetReadableName(UNavMovementComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetReadableName());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_HasValidPhysicsState(UNavMovementComponent* Self)
	{
		return Self->HasValidPhysicsState();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_InvalidateLightingCacheDetailed(UNavMovementComponent* Self, bool bInvalidateBuildEnqueuedLighting, bool bTranslationOnly)
	{
		auto _p0 = bInvalidateBuildEnqueuedLighting;
		auto _p1 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsActive(UNavMovementComponent* Self)
	{
		return Self->IsActive();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsEditorOnly(UNavMovementComponent* Self)
	{
		return Self->IsEditorOnly();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsNameStableForNetworking(UNavMovementComponent* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsNavigationRelevant(UNavMovementComponent* Self)
	{
		return Self->IsNavigationRelevant();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsReadyForOwnerToAutoDestroy(UNavMovementComponent* Self)
	{
		return Self->IsReadyForOwnerToAutoDestroy();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsSupportedForNetworking(UNavMovementComponent* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_MarkAsEditorOnlySubobject(UNavMovementComponent* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_NeedsLoadForClient(UNavMovementComponent* Self)
	{
		return Self->NeedsLoadForClient();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_NeedsLoadForEditorGame(UNavMovementComponent* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_NeedsLoadForServer(UNavMovementComponent* Self)
	{
		return Self->NeedsLoadForServer();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnActorEnableCollisionChanged(UNavMovementComponent* Self)
	{
		Self->OnActorEnableCollisionChanged();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnComponentCreated(UNavMovementComponent* Self)
	{
		Self->OnComponentCreated();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnComponentDestroyed(UNavMovementComponent* Self, bool bDestroyingHierarchy)
	{
		auto _p0 = bDestroyingHierarchy;
		Self->OnComponentDestroyed(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnCreatePhysicsState(UNavMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UNavMovementComponent*)Self)->OnCreatePhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnDestroyPhysicsState(UNavMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UNavMovementComponent*)Self)->OnDestroyPhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnUnregister(UNavMovementComponent* Self)
	{
		Self->OnUnregister();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PostInitProperties(UNavMovementComponent* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PostNetReceive(UNavMovementComponent* Self)
	{
		Self->PostNetReceive();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PostRename(UNavMovementComponent* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PreNetReceive(UNavMovementComponent* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RemoveTickPrerequisiteActor(UNavMovementComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RemoveTickPrerequisiteComponent(UNavMovementComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RequiresGameThreadEndOfFrameRecreate(UNavMovementComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RequiresGameThreadEndOfFrameUpdates(UNavMovementComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SendRenderDynamicData_Concurrent(UNavMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UNavMovementComponent*)Self)->SendRenderDynamicData_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SendRenderTransform_Concurrent(UNavMovementComponent* Self)
	{
		Self->SendRenderTransform_Concurrent();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetActive(UNavMovementComponent* Self, bool bNewActive, bool bReset)
	{
		auto _p0 = bNewActive;
		auto _p1 = bReset;
		Self->SetActive(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetAutoActivate(UNavMovementComponent* Self, bool bNewAutoActivate)
	{
		auto _p0 = bNewAutoActivate;
		Self->SetAutoActivate(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetComponentTickEnabled(UNavMovementComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetComponentTickEnabledAsync(UNavMovementComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabledAsync(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ShouldActivate(UNavMovementComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UNavMovementComponent*)Self)->ShouldActivate_WRAP();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ShouldCreatePhysicsState(UNavMovementComponent* Self)
	{
		return Self->ShouldCreatePhysicsState();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ShouldCreateRenderState(UNavMovementComponent* Self)
	{
		return Self->ShouldCreateRenderState();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ToggleActive(UNavMovementComponent* Self)
	{
		Self->ToggleActive();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_UninitializeComponent(UNavMovementComponent* Self)
	{
		Self->UninitializeComponent();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_UpdateComponentToWorld(UNavMovementComponent* Self, EUpdateTransformFlags UpdateTransformFlags, ETeleportType Teleport)
	{
		auto _p0 = UpdateTransformFlags;
		auto _p1 = Teleport;
		Self->UpdateComponentToWorld(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_AreNativePropertiesIdenticalTo(UNavMovementComponent* Self, UObject* Other)
	{
		auto _p0 = Other;
		return Self->AreNativePropertiesIdenticalTo(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CheckDefaultSubobjectsInternal(UNavMovementComponent* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_FinishDestroy(UNavMovementComponent* Self)
	{
		Self->FinishDestroy();
	}